cambiar el titulo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="xuetingyang">
     <link rel="stylesheet" href="./layout.css">
     <link rel="stylesheet" href="./index.css">
-    <title>Document</title>
+    <title>Futuros Innovadores</title>
  </head>
  <body>
     <header>
