--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="author" content="xuetingyang">
     <script type="text/javaScript" src="./paginaRegistro.js"></script>
+    <script type="text/javascript" src="./registro.js"></script>
     <title></title>
   </head>
   <body>
@@ -16,7 +17,7 @@
         <label for="apellido">Apellidos:</label>
         <input type="text" name="apellido" id="apellido" required>
         <label for="dni">Número de identidad:</label>
-        <input type="text" name="dni" id="dni" maxlength="9" pattern="[0-9]{8}+[a-zA-z]{1}" required>
+        <input type="text" name="dni" id="dni" maxlength="9" pattern="[0-9]{8}[a-zA-z]{1}" required>
         <label for="email">Correo electrónico:</label>
         <input type="email" name="email" id="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" required>
         <label for="estadoCivil">Estado Civil:</label>
@@ -27,23 +28,25 @@
         <input type="tel" name="tlf" id="tlf" pattern="[0-9]{9}" maxlength="9">
         
         <label for="disponibilidad">Disponibilidad:</label>
-        <input type="radio" name="disponibilidad" id="cualquier">Cualquier día
-        <input type="radio" name="disponibilidad" id="diaConcreto">Elegir dias concretos
+        <input type="radio" name="disponibilidad" id="cualquier" onclick="showDiaSemana(false)">Cualquier día
+        <input type="radio" name="disponibilidad" id="diaConcreto" onclick="showDiaSemana(true)">Elegir dias concretos
+        <div id="diaSemana" style="display: none;">
+          <input type="checkbox" name="lunes" id="lunes">
+          <label for="lunes">Lunes</label>
+          <input type="checkbox" name="martes" id="martes">
+          <label for="martes">Martes</label>
+          <input type="checkbox" name="miercoloes" id="miercoloes">
+          <label for="miercoloes">Miércoles</label>
+          <input type="checkbox" name="jueves" id="jueves">
+          <label for="jueves">Jueves</label>
+          <input type="checkbox" name="viernes" id="viernes">
+          <label for="viernes">Viernes</label>
+          <input type="checkbox" name="sabado" id="sabado">
+          <label for="sabado">Sábado</label>
+          <input type="checkbox" name="domingo" id="lunes">
+          <label for="domingo">Domingo</label>
+        </div>
         
-        <input type="checkbox" name="lunes" id="lunes">
-        <label for="lunes">Lunes</label>
-        <input type="checkbox" name="martes" id="martes">
-        <label for="martes">Martes</label>
-        <input type="checkbox" name="miercoloes" id="miercoloes">
-        <label for="miercoloes">Miércoles</label>
-        <input type="checkbox" name="jueves" id="jueves">
-        <label for="jueves">Jueves</label>
-        <input type="checkbox" name="viernes" id="viernes">
-        <label for="viernes">Viernes</label>
-        <input type="checkbox" name="sabado" id="sabado">
-        <label for="sabado">Sábado</label>
-        <input type="checkbox" name="domingo" id="lunes">
-        <label for="domingo">Domingo</label>
 
         <label for="motivacion">Motivación para entrar</label>
         <input type="checkbox" name="participar" id="participar">
