--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="./paginaNosotros/paginaNosotros.html">Sobre Nosotros</a>
                 </li>
                 <li>
-                    <a href="./paginaLibre/"></a>
+                    <a href="./paginaLibre/">Actividades</a>
                 </li>
             </ul>
         </nav>                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
