añadir enlace a la página actividad

--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -26,7 +26,7 @@
                     <a href="../paginaNosotros/paginaNosotros.html">Sobre Nosotros</a>
                 </li>
                 <li>
-                    <a href="../paginaLibre/">Actividades</a>
+                  <a href="../paginaActividad/paginaActividad.html">Actividades</a>
                 </li>
             </ul>
         </nav>                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
