--- a/paginaActividad/paginaActividad.html
+++ b/paginaActividad/paginaActividad.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="author" content="xuetingyang">
     <link rel="stylesheet" href="../layout.css">
-    <link rel="stylesheet" href="./paginaContacto.css">
+    <link rel="stylesheet" href="./paginaActividad.css">
     
     <title>Futuros Innovadores</title>
  </head>
