añadir texto en la página sobre nosotro y añadir un párrafo en la de registro

--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -33,6 +33,11 @@
 
     </header>
     <main>
+      <section id="entrante">
+        <p>
+          Si anhelas crecer en un entorno lleno de espíritu innovador, desafíos y colaboración en equipo, la Asociación de Futuros Innovadores es la plataforma que estás buscando. ¡Únete a nosotros y comencemos juntos el viaje hacia la innovación del futuro!
+        </p>
+      </section>
       <section id="formulario">
         <form name="f" action="" method="post" onsubmit="return obtenerDatos()">
           <label for="nombre">Nombres:</label>
