--- a/paginaNosotros/paginaNosotros.html
+++ b/paginaNosotros/paginaNosotros.html
@@ -33,7 +33,43 @@
 
     </header>
     <main>
-      
+      <section id="entrada">
+        <p>
+            ¡Conoce a los Creadores de Futuro de la Asociación de Innovadores!
+        </p>
+      </section>
+      <section id="miembro">
+        <article>
+            <h3><i>Ana García - Presidenta y Fundadora</i></h3>
+            <img src="" alt="">
+            <p>
+                Ingeniera informática apasionada por la inteligencia artificial y la realidad virtual. Con una maestría en Innovación Tecnológica, Ana ha liderado varios proyectos innovadores en el campo de la educación digital.
+            </p>
+            <p>
+                <b>Contribuciones a la Asociación</b>: Ana aporta su experiencia en tecnologías emergentes y liderazgo visionario para guiar a la asociación hacia la vanguardia de la innovación tecnológica y el aprendizaje digital.
+            </p>
+
+        </article>
+        <article>
+            <h3><i>Carlos Martínez - Director de Proyectos</i></h3>
+            <p>
+                Emprendedor serial con una sólida formación en gestión de proyectos. Carlos ha fundado y dirigido startups tecnológicas exitosas. Su enfoque pragmático y su visión estratégica son sus principales activos.
+            </p>
+            <p>
+                <b>Contribuciones a la Asociación</b>: Carlos lidera la ejecución de proyectos, aplicando su experiencia en desarrollo empresarial para llevar las ideas innovadoras de la asociación a la realidad.
+
+            </p>
+        </article>
+        <article>
+            <h3><i>Laura Sánchez - Coordinadora de Eventos</i></h3>
+            <p>
+                Experta en comunicación y relaciones públicas, Laura ha trabajado en la organización de eventos culturales y científicos. Su pasión por conectar personas a través de experiencias únicas la lleva a explorar continuamente nuevas formas de crear impacto.
+            </p>
+            <p>
+                <b>Contribuciones a la Asociación</b>: Laura se encarga de diseñar y coordinar eventos que fomentan la colaboración y la creatividad, creando una experiencia única para los miembros de la asociación.
+            </p>
+        </article>
+      </section>
       
     </main>
     <footer>
