--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="./index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="./paginaRegistro/paginaRegistro.html">Registrate</a>
+                    <a href="./paginaRegistro/paginaRegistro.html">Regístrate</a>
                 </li>
                 <li>
                     <a href="./paginaContacto/paginaContacto.html">Contáctanos</a>
