contenido y estructura básica

--- a/paginaNosotros/paginaNosotros.html
+++ b/paginaNosotros/paginaNosotros.html
@@ -39,7 +39,7 @@
         </p>
       </section>
       <section id="miembro">
-        <article>
+        <article id="fundadora">
             <h3><i>Ana García - Presidenta y Fundadora</i></h3>
             <img src="" alt="">
             <p>
@@ -50,7 +50,7 @@
             </p>
 
         </article>
-        <article>
+        <article id="director">
             <h3><i>Carlos Martínez - Director de Proyectos</i></h3>
             <p>
                 Emprendedor serial con una sólida formación en gestión de proyectos. Carlos ha fundado y dirigido startups tecnológicas exitosas. Su enfoque pragmático y su visión estratégica son sus principales activos.
@@ -60,7 +60,7 @@
 
             </p>
         </article>
-        <article>
+        <article id="coordinadora">
             <h3><i>Laura Sánchez - Coordinadora de Eventos</i></h3>
             <p>
                 Experta en comunicación y relaciones públicas, Laura ha trabajado en la organización de eventos culturales y científicos. Su pasión por conectar personas a través de experiencias únicas la lleva a explorar continuamente nuevas formas de crear impacto.
