poner el favicon a todas

--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="xuetingyang">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaRegistro.css">
     <script type="text/javaScript" src="./paginaRegistro.js"></script>
