diseño de encabera

--- a/paginaActividad/paginaActividad.html
+++ b/paginaActividad/paginaActividad.html
@@ -11,8 +11,9 @@
  </head>
  <body>
     <header>
-        <img src="../img/logo" alt="logo de la Asociación Futuros Innovadores" id="logo">
-        <h1>Futuros Innovadores</h1>
+        <div>
+            <img src="../img/fi" alt="logo de la Asociación Futuros Innovadores" id="logo">
+        </div>
         <nav>
             <ul>
                 <li>
