--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
  </head>
  <body>
     <header>
-        <h1>Futuros Innovadores</h1>
+        <div>
+            <img src="../img/fi" alt="logo de la Asociación Futuros Innovadores" id="logo">
+        </div>
         <nav>
             <ul>
                 <li>
