Primera actualización del sitio web--Xuetingyang6 (#1)
* cambiar el titulo

* version inicial terminada

* determinar la quinta página

* estilo de la página registro

* añadir enlace a la página actividad

* añadir texto en la página sobre nosotro y añadir un párrafo en la de registro

* corregir una errata del navegador

* contenido y estructura básica

* poner el favicon a todas

* diseño de encabera

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="xuetingyang">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./layout.css">
     <link rel="stylesheet" href="./index.css">
-    <title>Document</title>
+    <title>Futuros Innovadores</title>
  </head>
  <body>
     <header>
-        <h1>Futuros Innovadores</h1>
+        <div>
+            <img src="../img/fi" alt="logo de la Asociación Futuros Innovadores" id="logo">
+        </div>
         <nav>
             <ul>
                 <li>
                     <a href="./index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="./paginaRegistro/paginaRegistro.html">Registrate</a>
+                    <a href="./paginaRegistro/paginaRegistro.html">Regístrate</a>
                 </li>
                 <li>
                     <a href="./paginaContacto/paginaContacto.html">Contáctanos</a>
@@ -26,10 +29,11 @@
                     <a href="./paginaNosotros/paginaNosotros.html">Sobre Nosotros</a>
                 </li>
                 <li>
-                    <a href="./paginaLibre/"></a>
+                    <a href="./paginaActividad/paginaActividad.html">Actividades</a>
                 </li>
             </ul>
-        </nav>
+        </nav>                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
+
     </header>
     
     <main>
