--- a/paginaNosotros/paginaNosotros.html
+++ b/paginaNosotros/paginaNosotros.html
@@ -1,1 +1,84 @@
-paginaRegistro
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="author" content="xuetingyang">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../layout.css">
+    <link rel="stylesheet" href="./paginaNosotros.css">
+    
+    <title>Futuros Innovadores</title>
+ </head>
+ <body>
+    <header>
+        <div>
+            <img src="../img/fi" alt="logo de la Asociación Futuros Innovadores" id="logo">
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="../index.html">Inicio</a>
+                </li>
+                <li>
+                    <a href="../paginaRegistro/paginaRegistro.html">Regístrate</a>
+                </li>
+                <li>
+                    <a href="../paginaContacto/paginaContacto.html">Contáctanos</a>
+                </li>
+                <li>
+                    <a href="../paginaNosotros/paginaNosotros.html">Sobre Nosotros</a>
+                </li>
+                <li>
+                    <a href="../paginaActividad/paginaActividad.html">Actividades</a>
+                </li>
+            </ul>
+        </nav>                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
+
+    </header>
+    <main>
+      <section id="entrada">
+        <p>
+            ¡Conoce a los Creadores de Futuro de la Asociación de Innovadores!
+        </p>
+      </section>
+      <section id="miembro">
+        <article id="fundadora">
+            <h3><i>Ana García - Presidenta y Fundadora</i></h3>
+            <img src="" alt="">
+            <p>
+                Ingeniera informática apasionada por la inteligencia artificial y la realidad virtual. Con una maestría en Innovación Tecnológica, Ana ha liderado varios proyectos innovadores en el campo de la educación digital.
+            </p>
+            <p>
+                <b>Contribuciones a la Asociación</b>: Ana aporta su experiencia en tecnologías emergentes y liderazgo visionario para guiar a la asociación hacia la vanguardia de la innovación tecnológica y el aprendizaje digital.
+            </p>
+
+        </article>
+        <article id="director">
+            <h3><i>Carlos Martínez - Director de Proyectos</i></h3>
+            <p>
+                Emprendedor serial con una sólida formación en gestión de proyectos. Carlos ha fundado y dirigido startups tecnológicas exitosas. Su enfoque pragmático y su visión estratégica son sus principales activos.
+            </p>
+            <p>
+                <b>Contribuciones a la Asociación</b>: Carlos lidera la ejecución de proyectos, aplicando su experiencia en desarrollo empresarial para llevar las ideas innovadoras de la asociación a la realidad.
+
+            </p>
+        </article>
+        <article id="coordinadora">
+            <h3><i>Laura Sánchez - Coordinadora de Eventos</i></h3>
+            <p>
+                Experta en comunicación y relaciones públicas, Laura ha trabajado en la organización de eventos culturales y científicos. Su pasión por conectar personas a través de experiencias únicas la lleva a explorar continuamente nuevas formas de crear impacto.
+            </p>
+            <p>
+                <b>Contribuciones a la Asociación</b>: Laura se encarga de diseñar y coordinar eventos que fomentan la colaboración y la creatividad, creando una experiencia única para los miembros de la asociación.
+            </p>
+        </article>
+      </section>
+      
+    </main>
+    <footer>
+      <p>&copy; Xueting Yang</p>
+      <p><a href="https://site.educa.madrid.org/ies.villablanca.madrid/" target="_blank" >IES Villablanca</a></p>
+      <p><a href="mailto:xueting.yang@educa.madrid.org">Contacto</a></p>
+  </footer>
+  </body>
+</html>
