--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaRegistro.css">
-    <script type="text/javaScript" src="./paginaRegistro.js"></script>
+    <script type="text/javaScript" src="./registro.js"></script>
     <title>Futuros Innovadores</title>
  </head>
  <body>
