--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -12,7 +12,7 @@
  <body>
     <header>
       <div>
-        <img src="../img/fi" alt="logo de la Asociación Futuros Innovadores" id="logo">
+        <img src="../img/fi.png" alt="logo de la Asociación Futuros Innovadores" id="logo">
       </div>
         <nav>
             <ul>
