cambiar el texto alternativo de las fotos

--- a/paginaContacto/paginaContacto.html
+++ b/paginaContacto/paginaContacto.html
@@ -12,7 +12,7 @@
  <body>
     <header>
         <div>
-            <img src="../img/fi.png" alt="logo de la Asociación Futuros Innovadores" id="logo">
+            <img src="../img/fi.png" alt="logo: FI Futuros Innovadores" id="logo">
         </div>
         <nav>
             <ul>
@@ -61,7 +61,7 @@
                     </li>
                 </ul>
                 <br>
-                <img src="../img/firma.png" alt="">
+                <img src="../img/firma.png" alt="empresario-de-cultivos-dando-contrato-a-mujer-para-firmar">
                 Administrador del sitio web: <br>
                         <a href="mailto:fidemo.@future.innovador.com">fidemo.@future.innovador.com</a><br>
                         <a href="mailto:fiit.@future.innovador.com">fiit.@future.innovador.com</a>
