--- a/paginaActividad/paginaActividad.html
+++ b/paginaActividad/paginaActividad.html
@@ -32,12 +32,40 @@
                     <a href="../paginaActividad/paginaActividad.html">Actividades</a>
                 </li>
             </ul>
-        </nav>                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
-
+        </nav>
     </header>
     <main>
-      <section>
+      <section id="primer">
+        <h2>Explorando la Frontera de la Innovación: Un Viaje con la Asociación de Futuros Innovadores</h2>
 
+        ¡Saludos a todos los miembros apasionados de la Asociación de Futuros Innovadores! Estamos encantados de sumergirnos juntos en un emocionante viaje hacia la vanguardia de la tecnología y la creatividad. Como comunidad interdisciplinaria, estamos comprometidos con la excelencia y la innovación, y aquí hay algunas actividades emocionantes que te esperan:
+
+      </section>
+      <section>
+        <article>
+            <h3>Tendencias Tecnológicas</h3>
+            <p>Únete a nosotros en nuestro próximo Foro de Tendencias Tecnológicas, donde expertos de la industria compartirán sus conocimientos sobre las últimas innovaciones. Desde inteligencia artificial hasta biotecnología, exploraremos juntos los avances más emocionantes que están dando forma al futuro.</p>
+        </article>
+        <article>
+            <h3>
+                Hackatón Interdisciplinario
+            </h3>
+            <p>
+                Rompe las barreras académicas y únete a nuestro Hackatón Interdisciplinario. Trabaja junto a miembros de ingeniería, ciencia, arte y negocios para resolver desafíos tecnológicos emocionantes. ¡Las soluciones más creativas y efectivas serán reconocidas y premiadas!
+            </p>
+        </article>
+        <article>
+            <h3>Acelerador de Emprendimientos</h3>
+            <p>¿Tienes una idea innovadora que estás ansioso por llevar a la realidad? Únete a nuestro Acelerador de Emprendimientos, donde recibirás apoyo para desarrollar tu proyecto, participar en proyectos reales y obtener orientación de mentores de la industria. ¡Tu innovación podría ser la próxima gran revolución!</p>
+        </article>
+        <article>
+            <h3>Proyectos Sociales de Impacto</h3>
+            <p>Como Futuros Innovadores, creemos en la responsabilidad social. Únete a nosotros en proyectos que utilizan la innovación tecnológica para abordar problemas sociales. Participa activamente en iniciativas que marquen la diferencia y contribuyan positivamente a la sociedad.</p>
+        </article>
+        <article>
+            <h3>Seminarios Exclusivos para Miembros</h3>
+            <p>Disfruta de seminarios exclusivos, donde líderes de la industria compartirán sus experiencias y conocimientos. Obtén una visión privilegiada de los avances más recientes y las oportunidades emergentes en el mundo tecnológico.</p>
+        </article>
       </section>
       
     </main>
