Avances de la página contacto (#5)
* activar y desactivar opciones de los dias de semana con js

* la molestia de la altura de header

* diseño del formulario

* diseño y contenido de la página contacto

* cambiar el formato de las fotos de logo

* cambiar el texto alternativo de las fotos

* contenido de la pagina actividad

---------

Co-authored-by: xuetingDemo <501834377@qq.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <body>
     <header>
         <div>
-            <img src="../img/fi" alt="logo de la Asociación Futuros Innovadores" id="logo">
+            <img src="./img/fi.png" alt="logo: FI Futuros Innovadores" id="logo">
         </div>
         <nav>
             <ul>
