efecto de cambiar foto

--- a/paginaContacto/paginaContacto.html
+++ b/paginaContacto/paginaContacto.html
@@ -46,35 +46,35 @@
         <section id="fotos">
             <h3>Información de centro</h3>
             <div id="galeria">
+                <button id="next">Next &#11166;</button>
                 <img src="../img/localidad.png" alt="" class="fotoCentro">
                 <img src="../img/localidad1.png" alt="" class="fotoCentro">
                 <img src="../img/oficina3.png" alt="" class="fotoCentro">
                 <img src="../img/oficina2.png" alt="" class="fotoCentro">
                 <img src="../img/oficina1.png" alt="" class="fotoCentro">
             </div>
-            
         </section>
         <section id="localizacion">
             <p>
-                Dirección de la Sede Principal:
+                <b>Dirección de la Sede Principal:</b><br>
                         Asociación de Futuros Innovadores
                         Calle Innovación, Número 202
                         Ciudad Vanguardia, 12345
                         País Progresia
             </p>
             <p id="medio">
-                Dirección de la Sede Principal:
+                <b>Dirección de la Sede Principal:</b><br>
                         Asociación de Futuros Innovadores
                         Calle Innovación, Número 202
                         Ciudad Vanguardia, 12345
                         País Progresia
             </p>
             <p>
-                Teléfono de Contacto:
+                <b>Teléfono de Contacto:</b><br>
                         (+XX) XXXX-XXXX
-                        <br><br>
-                        Horario de Atención:
-                        Lunes a Viernes: 9:00 AM - 6:00 PM (Hora Progresia)
+                        <br><br><br>
+                        <b>Horario de Atención:</b> <br>
+                        Lunes a Viernes: <br>9:00 AM - 6:00 PM 
             </p>
         </section>
 
