--- a/paginaContacto/paginaContacto.html
+++ b/paginaContacto/paginaContacto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaContacto.css">
     <script type="text/javaScript" src="./galeria.js"></script>
+    <script type="text/javaScript" src="../paginaRegistro/registro.js"></script>
     
     <title>Futuros Innovadores</title>
  </head>
@@ -107,13 +108,13 @@
                 Tu voz es esencial para nosotros. Si tienes preguntas o sugerencias sobre innovación, eventos o la asociación en general, te animamos a que nos contactes en cualquier momento. Tu retroalimentación nos ayudará a mejorar continuamente y a satisfacer mejor las necesidades de los miembros de la asociación.
             </p>
             <br>
-            <form action="" method="get">
+            <form action="../txt.html" method="get">
                 <label for="nombre">Nombres:</label>
                 <input type="text" name="nombre" id="nombre" required><br>
                 <label for="email">Email:</label>
                 <input type="email" name="email" id="email" size="24" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" required><br>
                 <label for="mensaje">Mensaje:</label><br>
-                <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Escribir los mensajes..."></textarea><br>
+                <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Escribir los mensajes..." required></textarea><br>
                 <input type="submit" value="Enviar">
                 <input type="reset" value="Borrar"> 
             </form>
