poner fotos en la section de contenido

--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
                 <li>
                     <article>
                         <h3>Innovación de Vanguardia</h3>
-                        <img src="" alt="">
+                        
                         <p>
                             Estamos al tanto de las últimas tendencias tecnológicas, brindándote información actualizada sobre tecnología e inspiración innovadora para mantenerte siempre a la vanguardia de la industria.
                         </p>
+
+                        <img src="./img/estadistica.png" alt="" class="contentImg">
                     </article>
                 </li>
                 <li>
                     <article>
+                        <img src="./img/study.png" alt="" class="contentImg">
                         <h3>Intercambio Interdisciplinario</h3>
-                        <img src="" alt="">
+                        
                         <p>
                             Aquí, los límites académicos no son una restricción. Interactúa con miembros de ingeniería, ciencia, arte y negocios, avivando las llamas de la creatividad.
                         </p>
@@ -71,26 +74,26 @@
                 </li>
                 <li>
                     <article>
-                        <h3>Oportunidades Prácticas</h3>
-                        <img src="" alt="">
+                        <h3>Oportunidades Prácticas</h3>  
                         <p>
                             Participa en nuestros desafíos tecnológicos y en el acelerador de emprendimientos. Tendrás la oportunidad de llevar tus ideas a la práctica, obtener experiencia en proyectos reales y ganar reconocimiento y premios de la industria.
                         </p>
+                        <img src="./img/proyecto.png" alt="" class="contentImg">
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3>Apoyo de Mentores Industriales</h3>
-                        <img src="" alt="">
                         <p>
                             Hemos establecido sólidas colaboraciones con destacadas empresas tecnológicas, proporcionándote orientación de mentores, oportunidades de pasantías y apoyo para tu desarrollo profesional.
                         </p>
+                        <img src="./img/apoyo.png" alt="" class="contentImg">
                     </article>
                 </li>
                 <li>
                     <article>
+                        <img src="./img/brazos.png" alt="" class="contentImg">
                         <h3>Responsabilidad Social</h3>
-                        <img src="" alt="">
                         <p>
                             Como Futuros Innovadores, participamos activamente en proyectos que abordan problemas sociales, utilizando la innovación tecnológica para contribuir a la sociedad.
                         </p>
@@ -102,6 +105,7 @@
                         <p>
                             Disfruta de entrenamiento profesional, recursos de investigación exclusivos y financiamiento para proyectos de investigación, entre otros beneficios que te ayudarán a alcanzar mayores logros en tu carrera.
                         </p>
+                        <img src="./img/exito.png" alt="" class="contentImg">
                     </article>
                 </li>
             </ul>
