añdir foto en la section introduccion

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
     <main>
         <section id="introduccion">
             <h1>¡Bienvenido a la Asociación de Futuros Innovadores!</h1>
-            <img src="" alt="">
+            <img src="./img/reunion.png" alt="" id="primeraImg">
             <p>
                 Somos una organización única y llena de energía, dedicada a cultivar la próxima generación de innovadores y líderes tecnológicos.
             </p>
             <p>
                 Como miembro de la asociación, te sumergirás en una comunidad apasionada y llena de oportunidades, donde junto a talentos creativos de diversas disciplinas, exploraremos juntos la vanguardia de la tecnología del futuro.
             </p>
+            <img src="./img/teamRetro.png" alt="" id="segundoImg">
+            
 
         </section>
         <section id="contenido">
