terminar la página Nosotros y añadir box-shadow a los li de la página Registro

--- a/paginaNosotros/paginaNosotros.html
+++ b/paginaNosotros/paginaNosotros.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaNosotros.css">
+    <script type="text/javaScript" src="./cambiarFondo.js"></script>
     
     <title>Futuros Innovadores</title>
  </head>
@@ -32,23 +33,19 @@
                     <a href="../paginaActividad/paginaActividad.html">Actividades</a>
                 </li>
             </ul>
-        </nav>                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
-
+        </nav>
     </header>
     <main>
       <section id="entrada">
-        <p>
-            ¡Conoce a los Creadores de Futuro de la Asociación de Innovadores!
-        </p>
+        <h1>¡Conoce a los Creadores de Futuro de la Asociación de Innovadores!</h1>
       </section>
       <section id="miembro">
         <article id="fundadora">
             <h3><i>Ana García - Presidenta y Fundadora</i></h3>
-            <img src="" alt="">
+            <img src="../img/presidenta.png" alt="">
             <p>
                 Ingeniera informática apasionada por la inteligencia artificial y la realidad virtual. Con una maestría en Innovación Tecnológica, Ana ha liderado varios proyectos innovadores en el campo de la educación digital.
-            </p>
-            <p>
+            <br><br>
                 <b>Contribuciones a la Asociación</b>: Ana aporta su experiencia en tecnologías emergentes y liderazgo visionario para guiar a la asociación hacia la vanguardia de la innovación tecnológica y el aprendizaje digital.
             </p>
 
@@ -57,18 +54,17 @@
             <h3><i>Carlos Martínez - Director de Proyectos</i></h3>
             <p>
                 Emprendedor serial con una sólida formación en gestión de proyectos. Carlos ha fundado y dirigido startups tecnológicas exitosas. Su enfoque pragmático y su visión estratégica son sus principales activos.
-            </p>
-            <p>
+            <br><br>
                 <b>Contribuciones a la Asociación</b>: Carlos lidera la ejecución de proyectos, aplicando su experiencia en desarrollo empresarial para llevar las ideas innovadoras de la asociación a la realidad.
-
             </p>
+            <img src="../img/director.png" alt="">
         </article>
         <article id="coordinadora">
             <h3><i>Laura Sánchez - Coordinadora de Eventos</i></h3>
+            <img src="../img/coordinadora.png" alt="">
             <p>
                 Experta en comunicación y relaciones públicas, Laura ha trabajado en la organización de eventos culturales y científicos. Su pasión por conectar personas a través de experiencias únicas la lleva a explorar continuamente nuevas formas de crear impacto.
-            </p>
-            <p>
+            <br><br>
                 <b>Contribuciones a la Asociación</b>: Laura se encarga de diseñar y coordinar eventos que fomentan la colaboración y la creatividad, creando una experiencia única para los miembros de la asociación.
             </p>
         </article>
