--- a/paginaRegistro/paginaRegistro.html
+++ b/paginaRegistro/paginaRegistro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaRegistro.css">
     <script type="text/javaScript" src="./registro.js"></script>
-    <script type="text/javaScript" src="./registro.js"></script>
+    <script type="text/javaScript" src="./addBoxShadow.js"></script>
     <title>Futuros Innovadores</title>
  </head>
  <body>
@@ -145,9 +145,9 @@
                   </p>
               </li>
               
-          </ol>
-          <p>
-            ¿Tienes dudas? Contáctanos <a href="../paginaContacto/paginaContacto.html#contacto">aquí</a> !
+          </ol><br>
+          <p id="contact">
+            ¿Dudas? <br>Contáctanos <a href="../paginaContacto/paginaContacto.html#contacto">aquí</a> !
           </p>
         </p>
       </section>
