complementar los textos alternativos de las imagénes

--- a/paginaContacto/paginaContacto.html
+++ b/paginaContacto/paginaContacto.html
@@ -48,11 +48,11 @@
             <h3>Información de centro</h3>
             <div id="galeria">
                 <button id="next">Next &#11166;</button>
-                <img src="../img/localidad.png" alt="" class="fotoCentro">
-                <img src="../img/localidad1.png" alt="" class="fotoCentro">
-                <img src="../img/oficina3.png" alt="" class="fotoCentro">
-                <img src="../img/oficina2.png" alt="" class="fotoCentro">
-                <img src="../img/oficina1.png" alt="" class="fotoCentro">
+                <img src="../img/localidad.png" alt="edificio general" class="fotoCentro">
+                <img src="../img/localidad1.png" alt="cima del edificio" class="fotoCentro">
+                <img src="../img/oficina3.png" alt="sala de reuniones" class="fotoCentro">
+                <img src="../img/oficina2.png" alt="pasillo de la oficina" class="fotoCentro">
+                <img src="../img/oficina1.png" alt="comerdor del edificio" class="fotoCentro">
             </div>
         </section>
         <section id="localizacion">
