--- a/paginaNosotros/paginaNosotros.html
+++ b/paginaNosotros/paginaNosotros.html
@@ -42,7 +42,7 @@
       <section id="miembro">
         <article id="fundadora">
             <h3><i>Ana García - Presidenta y Fundadora</i></h3>
-            <img src="../img/presidenta.png" alt="">
+            <img src="../img/presidenta.png" alt="foto de presidenta">
             <p>
                 Ingeniera informática apasionada por la inteligencia artificial y la realidad virtual. Con una maestría en Innovación Tecnológica, Ana ha liderado varios proyectos innovadores en el campo de la educación digital.
             <br><br>
@@ -57,11 +57,11 @@
             <br><br>
                 <b>Contribuciones a la Asociación</b>: Carlos lidera la ejecución de proyectos, aplicando su experiencia en desarrollo empresarial para llevar las ideas innovadoras de la asociación a la realidad.
             </p>
-            <img src="../img/director.png" alt="">
+            <img src="../img/director.png" alt="foto de director">
         </article>
         <article id="coordinadora">
             <h3><i>Laura Sánchez - Coordinadora de Eventos</i></h3>
-            <img src="../img/coordinadora.png" alt="">
+            <img src="../img/coordinadora.png" alt="foto de coordinadora">
             <p>
                 Experta en comunicación y relaciones públicas, Laura ha trabajado en la organización de eventos culturales y científicos. Su pasión por conectar personas a través de experiencias únicas la lleva a explorar continuamente nuevas formas de crear impacto.
             <br><br>
