--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     
                 </tr>
                 <tr>
-                    <td>10:00 - 11:00</td>
-                    <td rowspan="2">Tecnología en la sociedad</td>
+                    <td>10:00-11:00</td>
+                    <td rowspan="2" class="actividad">Tecnología en la sociedad</td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -141,7 +141,7 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td>11:00 - 12:00</td>
+                    <td>11:00-12:00</td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -150,37 +150,37 @@
                     
                 </tr>
                 <tr>
-                    <td>12:00 - 13:00</td>
+                    <td>12:00-13:00</td>
                     <td></td>
                     <td></td>
-                    <td rowspan="2">Tendencias tecnológicas</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>13:00 - 14:00</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>Proyectos innovación</td>
-                </tr>
-                <tr>
-                    <td>17:30 - 18:30</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td rowspan="2" class="actividad">Tendencias tecnológicas</td>
                     <td></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>18:30 - 19:30</td>
+                    <td>13:00-14:00</td>
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>Proyectos innovación</td>
+                    <td></td>
+                    <td class="actividad">Proyectos innovación</td>
+                </tr>
+                <tr>
+                    <td>17:30-18:30</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>18:30-19:30</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="actividad">Proyectos innovación</td>
                     <td></td>
                     <td></td>
                 </tr>
