corregir algunos errores y unos warning(no todos,sigue con unos warning

--- a/paginaActividad/paginaActividad.html
+++ b/paginaActividad/paginaActividad.html
@@ -135,11 +135,9 @@
             </div>
         </article>
       </section>
-      <section id="ultimo">
+      <div id="ultimo">
         <img src="../img/fi2.png" alt="slogan de la asociacion: Comencemos juntos el viaje hacia la innovación del futuro">
-      </section>
-      
-      
+      </div>
     </main>
     <footer>
       <p>&copy; Xueting Yang</p>
