--- a/paginaContacto/paginaContacto.html
+++ b/paginaContacto/paginaContacto.html
@@ -95,12 +95,9 @@
                         <a href="mailto:fidemo.@future.innovador.com">fidemo.@future.innovador.com</a><br>
                         <a href="mailto:fiit.@future.innovador.com">fiit.@future.innovador.com</a>
         </section>
-        <section id="final">
-            <p>
-                ¡Gracias por tu interés en la Asociación de Futuros Innovadores! Al contactarnos, te embarcarás en un viaje lleno de exploración e innovación. No importa dónde te encuentres, esperamos con entusiasmo establecer una conexión estrecha contigo y construir juntos un futuro más brillante e innovador.
-            </p>
-            
-        </section>
+        <p id="final">
+            ¡Gracias por tu interés en la Asociación de Futuros Innovadores! Al contactarnos, te embarcarás en un viaje lleno de exploración e innovación. No importa dónde te encuentres, esperamos con entusiasmo establecer una conexión estrecha contigo y construir juntos un futuro más brillante e innovador.
+        </p>
         <img id="slogan" src="../img/fi3.png" alt="slogan de la asociacion: Comencemos juntos el viaje hacia la innovación del futuro">
         <section id="formulario">
             <h4>Preguntas y Sugerencias:</h4>
