--- a/txt.html
+++ b/txt.html
@@ -15,11 +15,9 @@
     </style>
 </head>
 <body>
-    <p>
-        <h1>Mensaje enviado.</h1>
-        <h2>Gracias por contáctanos</h2><br>
-        En <span id="time">5</span> segundos después volverá a página
-    </p>
+    <h1>Mensaje enviado.</h1>
+    <h2>Gracias por contáctanos</h2><br>
+    <p>En <span id="time">5</span> segundos después volverá a página</p>
     <script>
         var seg=5;
         var time=document.getElementById("time");
