--- a/paginaNosotros/paginaNosotros.html
+++ b/paginaNosotros/paginaNosotros.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="xuetingyang">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaNosotros.css">
     <script type="text/javaScript" src="./cambiarFondo.js"></script>
