--- a/paginaActividad/paginaActividad.html
+++ b/paginaActividad/paginaActividad.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="xuetingyang">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../layout.css">
     <link rel="stylesheet" href="./paginaActividad.css">
     <script type="text/javaScript" src="./incrementa.js"></script>
@@ -135,11 +135,9 @@
             </div>
         </article>
       </section>
-      <section id="ultimo">
+      <div id="ultimo">
         <img src="../img/fi2.png" alt="slogan de la asociacion: Comencemos juntos el viaje hacia la innovación del futuro">
-      </section>
-      
-      
+      </div>
     </main>
     <footer>
       <p>&copy; Xueting Yang</p>
